# mirdorph

./: .gitignore  .gitlab-ci.yml  NEWS  README.md  meson.build  org.gnome.gitlab.ranchester.Mirdorph.json
build-aux/meson/: postinstall.py
data/: meson.build  mirdorph.gresource.xml  org.gnome.gitlab.ranchester.Mirdorph.appdata.xml.in  org.gnome.gitlab.ranchester.Mirdorph.desktop.in  org.gnome.gitlab.ranchester.Mirdorph.gschema.xml  tos.txt
data/icons/: README  meson.build
data/ui/: about_dialog.ui.in  channel_inner_window.ui  channel_list_entry.ui  channel_properties_window.ui  channel_sidebar.ui  context_error_dialog.ui  context_menu.ui  extension_row.ui  general_menu.ui  generic_attachment.ui  gtk_style.css  image_viewer.ui  link_preview.ui  login_window.ui  main_window.ui  meson.build  message.ui  message_entry_bar.ui  message_entry_bar_attachment.ui  message_view.ui  settings_window.ui  tos_notice.ui  typing_indicator.ui
doc/: STANDARD.md  discord-maintainability.txt  on_message_in-selfbot-and-other-issues-info-attempt  on_message_self_bots_broken.md  plugin.md  slow-window-focusing.txt
mirdorph/: channel_inner_window.py  channel_properties_window.py  confman.py  event_manager.py  link_preview.py  login_window.py  main.py  main_window.py  meson.build  message_entry_bar.py  message_parsing.py  message_view.py  plugin.py  settings_window.py
mirdorph/plugins/: meson.build
mirdorph/plugins/helloworld/: configuration.ui  helloworld.gresource.xml  helloworld.plugin  helloworld.py  meson.build  welcome_message.txt
mirdorph/plugins/login_method_graphical/: login_method_graphical.plugin  login_method_graphical.py  meson.build
mirdorph/plugins/login_method_manual/: login_method_manual.gresource.xml  login_method_manual.plugin  login_method_manual.py  manual_login_page.ui  meson.build
mirdorph/plugins/login_method_password/: login_method_password.gresource.xml  login_method_password.plugin  login_method_password.py  meson.build  password_login_page.ui
patches/: 0001-add-workaround-for-on_message-on-self-bots.patch  0001-fix-broken-.content-and-.embeds-and-more-in-self-bot.patch  0002-fix-on-typing-for-self-bots.patch  0002-fix-webview-dependency.patch
patches/discord.py/: 0002-fix-on-typing-for-self-bots.patch
patches/html2pango/: 0001-allow-usage-from-python.patch  0002-markup-don-t-handle-links-here.patch
patches/libadwaita/: 0001-revert-stylesheet-softer-window-shadows.patch
patches/org.freedesktop.Sdk.Extension.rust-stable/: 0001-update-to-21.08-beta.patch
po/: POTFILES  POTFILES.in  README.md  lt.po  meson.build  update_potfiles.sh
src/: atkpicture.py  attachment.py  channel_inner_window.py  channel_properties_window.py  channel_sidebar.py  confman.py  discord_web_grabber.py  event_manager.py  event_receiver.py  get_token.js  image_viewer.py  link_preview.py  login_window.py  main.py  main_window.py  meson.build  message.py  message_entry_bar.py  message_parsing.py  message_view.py  mirdorph.gresource.xml  mirdorph.in  settings_window.py  typing_indicator.py  window.py  window.ui
src/disc_cogs/: event_listening.py  meson.build
src/plugins/: meson.build
src/plugins/helloworld/: helloworld.py
tests/: load_gresource.py  load_gtk.py  test.sh  test_calculate_msg_parts.py  test_confman.py  test_message_parsing.py  test_plug_engine.py
