LIBEXEC_DIR = join_paths(get_option('prefix'), get_option('libexecdir'))
EXTENSION_DIR = join_paths(get_option('prefix'), get_option('libdir'), meson.project_name())

glade_conf = configuration_data()
glade_conf.set('DATA_DIR', pkgdatadir)
glade_conf.set('EXTENSION_DIR', EXTENSION_DIR)
glade_conf.set('LOCALE_DIR', join_paths(get_option('prefix'), get_option('datadir'), 'locale'))
glade_conf.set('PYTHON_DIR', pythondir)
glade_conf.set('PYTHON_EXEC_DIR', join_paths(get_option('prefix'), py_installation.get_path('stdlib')))
glade_conf.set('PYTHON', py_installation.path())
glade_conf.set('libexecdir', LIBEXEC_DIR)
glade_conf.set('VERSION', app_version)
glade_conf.set('APPID', app_id)
glade_conf.set('authorfullname', authorfullname)
glade_conf.set('prettyname', prettyname)
glade_conf.set('CONTRIBUTORS', contributors)
